# type-gen

./: Cargo.toml  README.md  config.go  config.json  diff  diff.txt  test.rs
cli/: Cargo.toml
cli/commands/: Cargo.toml  README.md
cli/commands/src/: command.rs  config.rs  lib.rs  reader.rs  subs.rs
cli/commands/src/subs/: req.rs  rust.rs
cli/commands/tests/: json_to_rust_define.rs
cli/commands/tests/helper/: mod.rs
cli/sf-df/: Cargo.toml  README.md
cli/sf-df/for-test/child/: rust_child.rs
cli/sf-df/src/: configs.rs  directories.rs  extension.rs  fileconvertor.rs  filedatas.rs  fileoperator.rs  from_src_files.rs  json_to_langs.rs  langs.rs  lib.rs  main.rs
cli/sf-df/src/directories/: convertor.rs
cli/sf-df/src/filedatas/: extension.rs  file_structer.rs
cli/sf-df/src/from_src_files/fs_operators/: dist_writer.rs  src_paths.rs  util_fns.rs
cli/sf-df/src/from_src_files/test/: parent.txt
cli/sf-df/src/from_src_files/test/child/: child.txt
cli/sf-df/src/from_src_files/test/child/grand_child/: grand_child.txt
cli/sf-df/tests/: file_operations.rs  json_to_rust_define.rs
cli/sf-df/tests/helper/: mod.rs
cli/sf-df/tests/jsons/nests/: test-child.json
cli/sf-df/tests/jsons/nests/child/: array.json
cli/sf_df/: Cargo.toml  README.md
cli/sf_df/src/: configs.rs  extension.rs  fileconvertor.rs  fileoperator.rs  json_to_langs.rs  lib.rs
cli/sf_df/tests/: file_operations.rs  json_to_rust_define.rs
cli/sf_df/tests/helper/: mod.rs
cli/src/: file_operators.rs  from_src_files.rs  lib.rs  type_configuration.rs  writer.rs
cli/src/from_src_files/: fs_operators.rs  mains.rs
cli/src/from_src_files/fs_operators/: dist_dir_maker.rs  dist_writer.rs  extension.rs  src_reader.rs  util_fns.rs
cli/src/from_src_files/fs_operators/langs/: rust.rs
cli/tests/: json_to_rust_define.rs  type-config.json
docs/: aidel.dio  archtecture.dio  v1_arc.dio  v2-arc.dio
docs/adrs/: AdditionalStatementの削除.md  Directoryのトレードオフ-cli.md  Directoryのトレードオフ-description.md  Directoryのトレードオフ-langs.md  Directoryのトレードオフ-output.md  Directoryのトレードオフ-parserの導入.md  Directoryのトレードオフ-type_structure.md  (+3 more)
examples/: dist.rs
json/: Cargo.toml
lang-common/: Cargo.toml
lang-parser/: Cargo.toml
lang_parser/: README.md  src.rs
langs/: Cargo.toml
langs/rust/: Cargo.toml
langs/rust/src/: description_generator.rs  generator_builder.rs  lib.rs
langs/rust/src/description_generator/: declare_part_generator.rs  mapper.rs  property_part_generator.rs
not_uses/: from_json.rs  not_use.rs
src/: convertor.rs  json.rs  json_to_struct.rs  lang_config.rs  lib.rs  main.rs  type_defines.rs  type_gen.rs  type_generator.rs
tests/: rust_type_generator_test.rs
v1/: Cargo.toml
(+208 files in other folders)
