[package]
name = "type-gen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lang-common"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1",features=["derive"]}
serde_json="1"
npc ={ git = "https://github.com/u-kai/npc.git"}