[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = {path="../json"}
lang-common = {path="../lang-common"}
langs = {path="../langs"}
serde={version="1",features=["derive"]}
serde_json="1"