[package]
name = "tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
sf_df={path = "../sf_df"}
go={path = "../../langs/go"}
rust={path = "../../langs/rust"}
description_generator={path = "../../type_define/description_generator"}
paste="*"