[package]
name = "sf_df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = {path="../../json"}
npc ={ git = "https://github.com/u-kai/npc.git",branch = "main"}
rust = {path="../../langs/rust"}
go = {path="../../langs/go"}
description_generator = {path="../../type_define/description_generator"}
serde={version="1",features=["derive"]}
serde_json="1"