[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structure = {path = "../../type_define/structure"}
description_generator = {path = "../../type_define/description_generator"}
npc ={ git = "https://github.com/u-kai/npc.git",branch = "main"}